repair section portfolio align

--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ img {
   justify-content: center;
 }
 
-.container .lower-header {
+.team-member .container .lower-header {
   text-align: center;
   margin-bottom: 8px;
 }
@@ -316,6 +316,7 @@ img {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+  align-items: start;
 }
 
 .port-item .lower-header {
